force-app/main/default/objects/XactlyExpress__XCImportErrors__c/XactlyExpress__XCImportErrors__c.object-meta.xml
<CustomObject>
    <label>XCImportError</label>
    <nameField>
        <label>XCImportErrors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCImportErrors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>