force-app/main/default/objects/XactlyExpress__XCImportErrors__c/fields/XactlyExpress__OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__OpportunityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>XCImportErrors</relationshipLabel>
    <relationshipName>XCImportErrors</relationshipName>
    <type>Lookup</type>
</CustomField>