force-app/main/default/objects/XactlyExpress__XCImportErrors__c/fields/XactlyExpress__RawData__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__RawData__c</fullName>
    <label>RawData</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>